# tuntap4j

./: README.md  pom.xml
native/linux/: CMakeLists.txt  one_papachi_tuntap4j_NetworkDevice.c
native/macos/: CMakeLists.txt  one_papachi_tuntap4j_NetworkDevice.c  one_papachi_tuntap4j_NetworkDevice.h
native/windows/: CMakeLists.txt  one_papachi_tuntap4j_NetworkDevice.c  one_papachi_tuntap4j_NetworkDevice.h
src/main/java/: module-info.java
src/main/java/one/papachi/ifconfig4j/: NetIfUtils.java
src/main/java/one/papachi/ifconfig4j/api/: NetIfConfig.java
src/main/java/one/papachi/tuntap4j/: NetworkDevice.java  TapDevice.java  Test.java  TunDevice.java  TunTap4j.java  Utils.java
src/main/java/one/papachi/tuntap4j/api/: NetworkDevice.java  NicAddress.java  NicAddressConfigurable.java  TapAddressable.java  TapDevice.java  TunAddresssable.java  TunDevice.java  TunnelAddressConfigurable.java
src/main/java/one/papachi/tuntap4j/devices/: AbstractMacosNetworkDevice.java  AbstractMacosTunDevice.java  AbstractWindowsNetworkDevice.java  LinuxTapDevice.java  LinuxTunDevice.java  MacosExtTapDevice.java  MacosExtTunDevice.java  MacosUTunDevice.java  TapV9Adapter.java  TapV9Adapter.java.old  WinTunAdapter.java
src/main/java/one/papachi/tuntap4j/ffm/: AbstractMacosNetworkDevice.java  AbstractMacosTunDevice.java  LinuxNativeTapDevice.java  LinuxNativeTunDevice.java  MacosExtTapDevice.java  MacosExtTunDevice.java  MacosExtensionTapDevice.java  MacosNativeTunDevice.java  MacosUTunDevice.java  NativeLinuxApi.java  (+4 more)
src/main/resources/one/papachi/tuntap4j/: libtuntap4j.dylib
(+15 files in other folders)
